--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="game.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
+    <h1 class="score-container">Score</h1>    
+    <div class="button-container">
+        <button class= "button" id="button1" name = "R" >Rock</button>
+        <button class= "button" id="button2" name = "P">Paper</button>
+        <button class= "button" id= "button3" name = "S">Scissors</button>
+    </div>
 </body>
 </html>
